Kodade min specifika HTML-struktur för min startsida och om-sida.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,18 @@
-<p>about works!</p>
+<h2>Om sidan</h2>
+
+<h3>Beskrivning av uppgiften</h3>
+<p>Utgiften går ut på att skapa en dynamisk och responsiv webbapplikation med Angular för att förstå en
+    Angular-applikations konstruktion och hur dess struktur interagerar med varandra.</p>
+
+<h3>Hur jag löste uppgiften</h3>
+<p>Jag började med att installera Angular i min terminal. Sedan initierade jag ett nytt projekt och startade liveserver.
+    Jag skapade tre stycken komponenter för mina undersidor samt en för header- och picture-komponent. Header anropar
+    och importerar jag i app.component och picture till min startsida.</p>
+<p>I min header så importerar jag RouterLink och RouterLinkActive och i min app.routes.ts så skapar jag mina sökvägar
+    för att få en fungerande navigering.
+</p>
+<p>Konverterare och data-binding</p>
+<p>CSS</p>
+
+<h3>Slutsatser</h3>
+<p></p>
