--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
+  <h1>Moment 3 - DT208G</h1>
     <nav>
       <ul>
         <li><a routerLink="/home" routerLinkActive="active">Startsida</a></li>
