--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
-<p>home works!</p>
+<h2>Välkommen till mitt Angular-projekt!</h2>
+<p>Jag heter Frida Jansson och på den här webbplatsen kan du läsa om mitt Angular-projekt för Moment 3 i kursen
+    Programmering i TypeScript. Gå vidare till "Om sidan" för att läsa om hur jag löste uppgiften samt slutsatser och
+    egna tankar. Gå vidare till "Konverteringssida" för att hitta en funktion som konverterar meter till fot samt
+    celsius till fahrenheit och vice versa.</p>
 
+<!--Komponentanrop för att infoga min picturekomponent-->
 <app-picture />
