--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,9 +8,9 @@
 <p>Jag började med att installera Angular i min terminal. Sedan initierade jag ett nytt projekt och startade liveserver.
     Jag skapade tre stycken komponenter för mina undersidor samt en för header- och picture-komponent. Header anropar
     och importerar jag i app.component och picture till min startsida.</p>
-<p>I min header så importerar jag RouterLink och RouterLinkActive och i min app.routes.ts så skapar jag mina sökvägar
-    för att få en fungerande navigering.
-</p>
+<p>I min header så importerar jag RouterLink och RouterLinkActive och i min app.routes.ts så skapar jag mina routes
+    för att få en fungerande navigering. Vid det här laget så initierade jag ett Git-repo lokalt, la till alla filer,
+    gjorde en första commit, kopplade projektet till ett nytt Github-repo och pushade upp koden till master-grenen. </p>
 <p>Konverterare och data-binding</p>
 <p>CSS</p>
 
