Kodade på liknande sätt min konverterare från meter till fot. Adderade en egenskap som skriver ut resultatet i det format jag ville ha det. Använde toFixed för att hantera decimaler. Uppdaterade min text i om-sidan.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,7 +11,10 @@
 <p>I min header så importerar jag RouterLink och RouterLinkActive och i min app.routes.ts så skapar jag mina routes
     för att få en fungerande navigering. Vid det här laget så initierade jag ett Git-repo lokalt, la till alla filer,
     gjorde en första commit, kopplade projektet till ett nytt Github-repo och pushade upp koden till master-grenen. </p>
-<p>Konverterare och data-binding</p>
+<p>För min konverterare skapade jag de input-fält, div-element och knappar som jag ville ha. Jag importerade sedan
+    FormsModule för att möjliggöra formulärhantering och data-bindning. I input-fälten använde jag ngModel för
+    tvåvägsdata-bindning mot mina egenskaper i klassen. I min klass skapade jag de egenskaper och metoder som behövdes
+    för konverteringslogiken. Resultatet visade jag i HTML-filen med hjälp av dubbla måsvingar.</p>
 <p>CSS</p>
 
 <h3>Slutsatser</h3>
