Började koda CSS med grundläggande styling i styles.css. Styling till mitt main-element i app.component.css och header-styling i header.component.css.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--Komponentanrop för att infoga min headerkomponent-->
 <app-header />
 
-<router-outlet />
+<main>
+    <router-outlet />
+</main>
