--- a/src/app/converter/converter.component.html
+++ b/src/app/converter/converter.component.html
@@ -1,4 +1,4 @@
-<h2>Omvandla Celsius till Fahrenheit och vice versa</h2>
+<h2>Omvandla Celsius & Fahrenheit</h2>
 
 <div class="converterContainer">
     <label for="celsius">Celsius:</label><br>
@@ -19,7 +19,7 @@
     <p>Resultat: {{ resultTempText }}</p>
 </div>
 
-<h2>Omvandla Meter till Fot och vice versa</h2>
+<h2>Omvandla Meter & Fot</h2>
 <div class="converterContainer">
     <label for="meter">Meter:</label><br>
     <input type="number" id="meter" [(ngModel)]="meterValue"><br>
