--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+body {
+    font-family: 'Roboto', Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0 auto;
+    overflow-x: hidden;
+}
+
+p {
+    line-height: 1.7em;
+}
+
+h2,
+h3 {
+    text-align: center;
+    margin-top: 30px;
+}
+
+h2 {
+    border-bottom: 1px solid lightgrey;
+    padding-bottom: 20px;
+    background: linear-gradient(135deg, #dd0031, #c2185b, #512da8);
+    color: transparent;
+    background-clip: text;
+}
