Hade problem med layout på en undersida så jag fick ändra inställningar i mitt body-element. Sedan kodade jag resterande styling för desktopvy.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,7 +15,10 @@
     FormsModule för att möjliggöra formulärhantering och data-bindning. I input-fälten använde jag ngModel för
     tvåvägsdata-bindning mot mina egenskaper i klassen. I min klass skapade jag de egenskaper och metoder som behövdes
     för konverteringslogiken. Resultatet visade jag i HTML-filen med hjälp av dubbla måsvingar.</p>
-<p>CSS</p>
+<p>För min styling så adderade jag grundinställningar i styles.css. Jag skapade ett main-element runt router-outlet och
+    adderade CSS i app.component.css. Resterande styling skedde i varje komponents styling-fil. </p>
 
 <h3>Slutsatser</h3>
-<p></p>
+<p>Väldigt rolig uppgift! Det är ett väldigt enkelt och smidigt sätt att jobba på med sömlösa resultat. Det tar lite tid
+    att lära sig att navigera i alla mappar och komponenter. Jag tycker att det lätt kan bli stökigt med så många filer
+    men när man kommer i det så ser man fler fördelar. </p>
