--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,7 @@
 
 body {
     font-family: 'Roboto', Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0 auto;
+    margin: 0;
     overflow-x: hidden;
 }
 
