--- a/src/app/converter/converter.component.css
+++ b/src/app/converter/converter.component.css
@@ -16,3 +16,21 @@ button {
     border-color: #c2185b;
 }
 
+.converterContainer {
+    border: 2px solid lightgrey;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+@media screen and (max-width : 700px) {
+    button {
+        float: none;
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    input {
+        width: 100%;
+    }
+}
+
