--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -40,3 +40,34 @@ li a:hover {
     text-decoration-line: underline overline;
     text-underline-offset: 5px;
 }
+
+@media screen and (max-width : 700px) {
+    header {
+        width: 100%;
+        background: transparent;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    h1 {
+        background: linear-gradient(135deg, #dd0031, #c2185b, #512da8);
+        width: 100%;
+        text-align: center;
+        padding: 10px 0;
+        margin-bottom: 5px;
+    }
+
+    nav li {
+        width: 90%;
+        margin: 5px;
+        background: linear-gradient(135deg, #dd0031, #c2185b, #512da8);
+        border-radius: 10px;
+        text-align: center;
+        padding: 10px 0;
+    }
+
+}
