--- a/src/app/picture/picture.component.css
+++ b/src/app/picture/picture.component.css
@@ -8,3 +8,10 @@
     display: flex;
     justify-content: center;
 }
+
+@media screen and (max-width : 700px) {
+    .profile {
+        width: 100%;
+        margin-top: 20px;
+    }
+}
